--- a/styles.css
+++ b/styles.css
@@ -1,35 +1,25 @@
 .btn {
-  background: #75afd6;
-  background-image: -webkit-linear-gradient(top, #75afd6, #2980b9);
-  background-image: -moz-linear-gradient(top, #75afd6, #2980b9);
-  background-image: -ms-linear-gradient(top, #75afd6, #2980b9);
-  background-image: -o-linear-gradient(top, #75afd6, #2980b9);
-  background-image: linear-gradient(to bottom, #75afd6, #2980b9);
-  -webkit-border-radius: 28;
-  -moz-border-radius: 28;
-  border-radius: 28px;
-  font-family: Arial;
+  font-family: 'Amatic SC', cursive;
   color: #ffffff;
-  font-size: 11px;
+  font-size: 20px;
+  background: #35465c;
   padding: 10px 20px 10px 20px;
   text-decoration: none;
 }
 
 .btn:hover {
-  background: #3cb0fd;
-  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+  background: #3784b3;
   text-decoration: none;
 }
 
 body {
- background-color:#35465c;
+ background-color:none;
 }
 
 h1 {
-  font-color:#FFFFFF;
+  font-color:#35465c;
+  font-family: 'Amatic SC', cursive;
+  font-size:25px;
+  text-align:center;
 }
 
