--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 .btn {
-  font-family: 'Amatic SC', cursive;
+  font-family: 'Amatic SC';
   color: #ffffff;
   font-size: 20px;
   background: #35465c;
@@ -8,7 +8,7 @@
 }
 
 .btn:hover {
-  background: #3784b3;
+  background: black;
   text-decoration: none;
 }
 
@@ -18,7 +18,7 @@ body {
 
 h1 {
   font-color:#35465c;
-  font-family: 'Amatic SC', cursive;
+  font-family: 'Amatic SC';
   font-size:25px;
   text-align:center;
 }
