--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-.btn {
+.btn-terri {
   font-family: 'Amatic SC';
   color: #ffffff;
   font-size: 20px;
@@ -7,7 +7,7 @@
   text-decoration: none;
 }
 
-.btn:hover {
+.btn-terri:hover {
   background: black;
   text-decoration: none;
 }
@@ -16,10 +16,11 @@ body {
  background-color:none;
 }
 
-h1 {
+
+/*h1 {
   font-color:#35465c;
   font-family: 'Amatic SC';
   font-size:25px;
   text-align:center;
-}
+}*/
 
